[tool.poetry]
name = "echo_bot"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
